--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rxdart: ^0.26.0
+  rxdart: ^0.27.5
   esc_pos_utils: ^0.3.6
   # esc_pos_utils:
     # path: ../esc_pos_utils
   flutter_bluetooth_basic:
     git:
-      url: git://github.com/gunantosteven/flutter_bluetooth_basic.git
+      url: https://github.com/gunantosteven/flutter_bluetooth_basic.git
 
 dev_dependencies:
   flutter_test:
